--- a/css/mobile.css
+++ b/css/mobile.css
@@ -2,7 +2,7 @@
 @media screen and (min-width: 320px) and (max-width: 668px) {
   .test_container {
     margin: 0;
-    padding: inherit;
+    padding: 0 5px 0 0;
   }
 
   /* Header & Nav */
